feat(storage): implement request-scoped storage client middleware and update routes for dynamic configuration
Signed-off-by: Megha Goyal <goyamegh@amazon.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,10 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "server/types/**/*.d.ts"
+  ]
 }
