feat: Implement request-scoped storage client middleware for dynamic data source configuration (#16)
* feat: Implement data source adapter for OpenSearch with health check and connection testing

- Added `server/adapters/index.ts` for managing data source adapters, including OpenSearch client creation and connection testing functions.
- Introduced `server/adapters/types.ts` to define interfaces for data source configurations and operations.
- Created `server/middleware/dataSourceConfig.ts` to resolve storage and observability configurations from request headers or environment variables.
- Updated routes in `server/routes/index.ts` to include observability routes.
- Enhanced existing routes (`judge`, `logs`, `metrics`, `traces`, `storage`) to utilize new configuration resolution and connection testing.
- Added new `server/routes/observability.ts` for health checks and connection testing for observability data sources.
- Refactored services to use configuration headers for observability and storage.
- Updated types in `types/index.ts` to include configurations for storage and observability clusters.

Signed-off-by: Megha Goyal <goyamegh@amazon.com>

* feat(storage): implement request-scoped storage client middleware and update routes for dynamic configuration

Signed-off-by: Megha Goyal <goyamegh@amazon.com>

* feat(tests): add integration and unit tests for storage client middleware and routes

Signed-off-by: Megha Goyal <goyamegh@amazon.com>

* feat(settings): add connection status and storage statistics display in SettingsPage

Signed-off-by: Megha Goyal <goyamegh@amazon.com>

* feat(tests): enhance unit tests for model pricing and route handling, including observability routes

Signed-off-by: Megha Goyal <goyamegh@amazon.com>

* feat(health): implement health check endpoint with versioning and add integration tests

Signed-off-by: Megha Goyal <goyamegh@amazon.com>

* feat(tests): update model name test to reflect new version and enhance mock request creation

Sign

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,6 +125,65 @@ jobs:
       - name: Check license headers
         run: npx jest tests/unit/licenseHeaders.test.ts
 
+  integration-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build server
+        run: npm run build:server
+
+      - name: Start backend server
+        run: |
+          node server/dist/index.js &
+          echo $! > server.pid
+          echo "Server PID: $(cat server.pid)"
+
+      - name: Wait for server to be healthy
+        run: |
+          echo "Waiting for server to start..."
+          for i in {1..30}; do
+            if curl -s http://localhost:4001/health | grep -q '"status":"ok"'; then
+              echo "Server is healthy!"
+              curl -s http://localhost:4001/health | jq .
+              exit 0
+            fi
+            echo "Attempt $i: Server not ready yet..."
+            sleep 1
+          done
+          echo "Server failed to start within 30 seconds"
+          exit 1
+
+      - name: Run integration tests
+        run: npm run test:integration
+        env:
+          TEST_BACKEND_URL: http://localhost:4001
+
+      - name: Stop backend server
+        if: always()
+        run: |
+          if [ -f server.pid ]; then
+            kill $(cat server.pid) || true
+            rm server.pid
+          fi
+
+      - name: Integration test summary
+        if: always()
+        run: |
+          echo "## 🧪 Integration Tests" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Integration tests completed. Check the test output above for details." >> $GITHUB_STEP_SUMMARY
+
   security-scan:
     runs-on: ubuntu-latest
     steps:
